# icp-proj

./: CMakeLists.txt  Doxyfile  Makefile  README.cs.md  README.md  README.txt
.cache/clangd/index/: AutomatView.cpp.A7B6DC304E40DDD9.idx  AutomatView.hpp.A3B7C09870DF95C2.idx  CodeGenerator.cpp.326631F49E44CA69.idx  CodeGenerator.hpp.13559550C1F0A556.idx  GuiClient.cpp.27B6FE9EE1F183A0.idx  GuiClient.hpp.C9470941E0FB21E1.idx  MockStateMachine.cpp.1DAC511C6F021A8B.idx  MockStateMachine.hpp.0AC6FAD1F744E3ED.idx  StateItem.cpp.70FB87BE4BB01CBF.idx  StateItem.hpp.4FF70C0D951A6943.idx  TransitionItem.cpp.B2537531F11F990D.idx  TransitionItem.hpp.510D907E6351157D.idx  fsm.cpp.DF4EC7B95AADD740.idx  fsm.hpp.86402DB05E5D399E.idx  logger.cpp.E319BB51359648AB.idx  logger.hpp.F8D810C88D1F8AD2.idx  main.cpp.E3236255B89618E4.idx  mainwindow.cpp.BF2D76B2FC1CB1C5.idx  mainwindow.hpp.50B7FFE3166C3E59.idx  state.cpp.1B97C431224105C9.idx  state.hpp.5595C7E5CA11BBAA.idx  transition.cpp.487595DF04A238C0.idx  transition.hpp.AAC949ABBE6C7BF4.idx  variable.cpp.E0105A87172EA942.idx  variable.hpp.57400DE167794C7C.idx  xmlparser.cpp.1C4EE605C0BCA838.idx  xmlparser.hpp.FDA853DA53DE6D66.idx
cmake/: compile_fsm.cmake  run_fsm.cmake
doc/: README_CHANGES.md  setup.md
examples/: Addition.xml  CounterWithReset.xml  EdgeDetector.xml  EvenChecker.xml  TOF5.xml  TOF5s.xml  TimeoutOnly.xml  Timers.xml  TrafficLight.xml  _determinism.xml  _hourglass.xml  _self_transitions.xml  empty.xml  inputs.xml  invalid_empty_extra_attribute.xml  invalid_empty_missing_name_attribute.xml  invalid_inputs_extra_attribute.xml  invalid_inputs_invalid_attribute.xml  invalid_outputs_extra_attribute.xml  invalid_outputs_missing_name_attribute.xml  invalid_states_missing_name.xml  invalid_states_no_initial_state.xml  invalid_transitions_extra_attribute.xml  invalid_transitions_extra_condition_attribute.xml  invalid_transitions_no_condition_event.xml  invalid_transitions_no_from_state.xml  invalid_transitions_no_to_state.xml  invalid_variables_extra_attribute.xml  invalid_variables_missing_value_attribute.xml  outputs_empty.xml  transitions.xml
examples/parser_examples/: invalid_empty_empty_name.xml  invalid_empty_invalid_attribute.xml  invalid_outputs_invalid_attribute.xml  invalid_variables_invalid_attribute.xml  invalid_variables_missing_name_attribute.xml  outputs.xml  transitions.xml  transitions_no_condition.xml  variables.xml
examples/parser_testing_examples/: inputs_empty.xml  invalid_inputs_missing_name_attribute.xml  invalid_transitions_extra_condition_attribute.xml  invalid_variables_missing_type_attribute.xml  states.xml  states_empty.xml  states_no_code.xml  transitions_empty.xml  variables_empty.xml
src/: CMakeLists.txt  TOF5.xml  doxygen_doc.patch  main.cpp  test.xml
src/backend/: CodeGen.cpp  CodeGen.hpp  CodeGenerator.cpp  CodeGenerator.hpp  GuiClient.cpp  GuiClient.hpp  MockStateMachine.cpp  MockStateMachine.hpp  fsm.cpp  fsm.hpp  logger.cpp  logger.hpp  state.cpp  state.hpp  transition.cpp  transition.hpp  variable.cpp  variable.hpp  xmlparser.cpp  xmlparser.hpp
src/frontend/: AutomatView.cpp  AutomatView.hpp  StateItem.cpp  StateItem.hpp  TransitionItem.cpp  TransitionItem.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
src/fsm/: FSM.cpp  FSM.hpp  FiniteStateMachine.cpp  FiniteStateMachine.hpp  State.cpp  State.hpp  Transition.cpp  Transition.hpp  Variable.cpp  Variable.hpp
src/fsm (deprecated)/: FSM.cpp  FSM.hpp  FiniteStateMachine.cpp  State.hpp
src/parser/: Parser.cpp  Parser.hpp
